// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Chip component should render correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Chip
    onClickHandler={[MockFunction]}
    selected={false}
    text="Lorem ipsum dolor sit amet"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <span
          className="addIcon icon icon-x"
          onClick={[Function]}
        />,
        <div
          className="text"
          onClick={[Function]}
        >
          Lorem ipsum dolor sit amet
        </div>,
        null,
      ],
      "className": "chip undefined",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "addIcon icon icon-x",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": "span",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Lorem ipsum dolor sit amet",
          "className": "text",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Lorem ipsum dolor sit amet",
        "type": "div",
      },
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <span
            className="addIcon icon icon-x"
            onClick={[Function]}
          />,
          <div
            className="text"
            onClick={[Function]}
          >
            Lorem ipsum dolor sit amet
          </div>,
          null,
        ],
        "className": "chip undefined",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "addIcon icon icon-x",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": "span",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Lorem ipsum dolor sit amet",
            "className": "text",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Lorem ipsum dolor sit amet",
          "type": "div",
        },
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Test Chip component should render correctly 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Chip
    onClickHandler={[MockFunction]}
    selected={true}
    text="Lorem ipsum dolor sit amet"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        null,
        <div
          className="text"
          onClick={[Function]}
        >
          Lorem ipsum dolor sit amet
        </div>,
        <span
          className="cancelIcon icon icon-x"
          onClick={[Function]}
        />,
      ],
      "className": "selected chip undefined",
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Lorem ipsum dolor sit amet",
          "className": "text",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Lorem ipsum dolor sit amet",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "cancelIcon icon icon-x",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": "span",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          <div
            className="text"
            onClick={[Function]}
          >
            Lorem ipsum dolor sit amet
          </div>,
          <span
            className="cancelIcon icon icon-x"
            onClick={[Function]}
          />,
        ],
        "className": "selected chip undefined",
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Lorem ipsum dolor sit amet",
            "className": "text",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Lorem ipsum dolor sit amet",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "cancelIcon icon icon-x",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": "span",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
